--- a/src/fr/uha/ensisa/dbpediaquizz/fxml/Interface.fxml
+++ b/src/fr/uha/ensisa/dbpediaquizz/fxml/Interface.fxml
@@ -26,12 +26,12 @@
       <JFXToolbar layoutX="-4.0" prefHeight="800.0" prefWidth="230.0" style="-fx-background-color: #e6e6e6;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="64.0" />
       <JFXDialogLayout layoutX="432.0" layoutY="187.0" prefHeight="120.0" prefWidth="600.0" AnchorPane.leftAnchor="380.0" AnchorPane.rightAnchor="150.0" AnchorPane.topAnchor="180.0">
          <children>
-            <Label fx:id="question" alignment="TOP_LEFT" text="lorem ipsum banana split zeogijzegoi ezgoij zoeigjzeig if (loop) zeogijzeg oui oui" wrapText="true">
+            <Label fx:id="questionLabel" alignment="TOP_LEFT" text="lorem ipsum banana split zeogijzegoi ezgoij zoeigjzeig if (loop) zeogijzeg oui oui" wrapText="true">
                <font>
                   <Font size="26.0" />
                </font>
                <padding>
-                  <Insets bottom="30.0" left="20.0" right="20.0" />
+                  <Insets bottom="20.0" left="20.0" right="20.0" />
                </padding>
             </Label>
          </children>
@@ -54,24 +54,29 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <JFXButton fx:id="answer1" buttonType="RAISED" onAction="#handleAnswerButton" prefHeight="160.0" prefWidth="500.0" style="-fx-background-color: #f6f6f6;" text="Réponse A">
+            <JFXButton fx:id="answer1" buttonType="RAISED" focusTraversable="false" onAction="#handleAnswerButton" prefHeight="160.0" prefWidth="500.0" style="-fx-background-color: #f6f6f6;" text="Réponse A" textAlignment="CENTER" wrapText="true">
                <font>
                   <Font size="20.0" />
                </font></JFXButton>
-            <JFXButton fx:id="answer2" buttonType="RAISED" onAction="#handleAnswerButton" prefHeight="160.0" prefWidth="500.0" style="-fx-background-color: #f6f6f6;" text="Réponse B" GridPane.columnIndex="1">
+            <JFXButton fx:id="answer2" buttonType="RAISED" focusTraversable="false" onAction="#handleAnswerButton" prefHeight="160.0" prefWidth="500.0" style="-fx-background-color: #f6f6f6;" text="Réponse B" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="1">
                <font>
                   <Font size="20.0" />
                </font></JFXButton>
-            <JFXButton fx:id="answer3" buttonType="RAISED" onAction="#handleAnswerButton" prefHeight="160.0" prefWidth="500.0" style="-fx-background-color: #f6f6f6;" text="Réponse C" GridPane.rowIndex="1">
+            <JFXButton fx:id="answer3" buttonType="RAISED" focusTraversable="false" onAction="#handleAnswerButton" prefHeight="160.0" prefWidth="500.0" style="-fx-background-color: #f6f6f6;" text="Réponse C" textAlignment="CENTER" wrapText="true" GridPane.rowIndex="1">
                <font>
                   <Font size="20.0" />
                </font></JFXButton>
-            <JFXButton fx:id="answer4" buttonType="RAISED" onAction="#handleAnswerButton" prefHeight="160.0" prefWidth="500.0" style="-fx-background-color: #f6f6f6;" text="Réponse D" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <JFXButton fx:id="answer4" buttonType="RAISED" focusTraversable="false" onAction="#handleAnswerButton" prefHeight="160.0" prefWidth="500.0" style="-fx-background-color: #f6f6f6;" text="Réponse D" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <font>
                   <Font size="20.0" />
                </font></JFXButton>
          </children>
       </GridPane>
-      <JFXButton fx:id="fieldText" buttonType="RAISED" layoutX="380.0" layoutY="154.0" style="-fx-background-color: #e23e31; -fx-background-radius: 0;" text="[Matière]" textFill="WHITE" AnchorPane.leftAnchor="380.0" AnchorPane.rightAnchor="750.0" />
+      <JFXButton fx:id="fieldText" buttonType="RAISED" focusTraversable="false" layoutX="230.0" layoutY="96.0" style="-fx-background-color: #e23e31; -fx-background-radius: 0;" text="[Matière]" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="230.0" AnchorPane.rightAnchor="900.0" />
+      <Label fx:id="questionNumberLabel" layoutX="380.0" layoutY="164.0" text="Question number" AnchorPane.leftAnchor="380.0" AnchorPane.rightAnchor="700.0" AnchorPane.topAnchor="164.0">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
